+ more settings added to createMap call

--- a/example.html
+++ b/example.html
@@ -18,9 +18,7 @@
                             'height': '400px',
                             'margin-bottom': '20px'});
 
-            $('#map').createMap({ 'zoom': 15,
-                                  'longitude': '16.372778',
-                                  'latitude': '48.209206' });
+            $('#map').createMap('Wien');
 
         });
     </script>
