~ changed sample address

--- a/example.html
+++ b/example.html
@@ -20,7 +20,7 @@
 
             $('#map').createMap({ 'address': 'Wien' });
             $('#map').one('moveend', function () {
-                $(this).findAddress('Denisgasse 26, Wien');
+                $(this).findAddress('Stephansplatz, Wien');
             })
 
         });
