--- a/example.html
+++ b/example.html
@@ -20,7 +20,7 @@
 
             $('#map').createMap({ 'address': 'Wien' });
             $('#map').one('moveend', function () {
-                $(this).findAddress('Stephansplatz, Wien');
+                $(this).findAddress('Wollzeile, Wien');
             })
 
         });
