+ adding info field, if address.info is supplied

--- a/example.html
+++ b/example.html
@@ -23,7 +23,7 @@
                 // draw multiple markers
                 $(this).addMarker([ 'Wollzeile, Wien', 'Denisgasse, Wien', 
                                      { 'lat': 48.2, 'long': 36.3674 }, 
-                                     { address: 'Tulln', zoom: 10 } ], 
+                                     { address: 'Tulln', zoom: 10, info: 'Blumenstadt' } ], 
                                      { 'clear': false });
                 
                 // draw marker with custom icon
