--- a/example.html
+++ b/example.html
@@ -18,7 +18,7 @@
                             'height': '400px',
                             'margin-bottom': '20px'});
 
-            $('#map').one('moveend', function () {
+            $('#map').one('mapmoveend', function () {
                 $(this).addMarker(); // draw Marker in the center of current view
                 // draw multiple markers
                 $(this).addMarker([ 'Wollzeile, Wien', 'Denisgasse, Wien', 
